--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -65,4 +65,13 @@
 
     </style>
 
+    <style name="Theme.4BB4G10.Body2" parent="TextAppearance.MaterialComponents.Body2">
+
+        <item name="fontFamily">monospace</item>
+        <item name="android:textSize">20dp</item>
+        <item name="android:textColor">@color/primary</item>
+        <item name="fontWeight">700</item>
+
+    </style>
+
 </resources>
