--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -25,7 +25,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         android:layout_marginTop="@dimen/default_margin"
         android:text="@string/home_title"
-        android:textAppearance="@style/Theme.4BB4G10.Body2"/>
+        android:textAppearance="@style/Theme.4BB4G10.Body3"/>
 
     <com.google.android.material.textview.MaterialTextView
         android:id="@+id/home_fragment_subtitle"
@@ -38,5 +38,29 @@
         android:text="@string/home_subtitle"
         android:gravity="center"
         android:textAppearance="@style/Theme.4BB4G10.Body1"/>
+
+    <com.google.android.material.textview.MaterialTextView
+        android:id="@+id/home_fragment_recycler_title"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@+id/home_fragment_subtitle"
+        app:layout_constraintStart_toStartOf="parent"
+        android:layout_marginTop="@dimen/default_margin"
+        android:text="@string/hom_services"
+        android:gravity="center"
+        android:textAppearance="@style/Theme.4BB4G10.Body3"/>
+
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/home_fragment_recycler"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintTop_toBottomOf="@+id/home_fragment_recycler_title"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginTop="@dimen/small_margin"
+        tools:listitem="@layout/item_service"
+        tools:itemCount="4" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
