--- a/app/src/main/res/navigation/home_nav.xml
+++ b/app/src/main/res/navigation/home_nav.xml
@@ -9,7 +9,11 @@
         android:id="@+id/homeFragment"
         android:name="com.example.prueba.HomeFragment"
         android:label="fragment_home"
-        tools:layout="@layout/fragment_home" />
+        tools:layout="@layout/fragment_home" >
+        <action
+            android:id="@+id/action_homeFragment_to_specialistFragment"
+            app:destination="@id/specialistFragment" />
+    </fragment>
     <fragment
         android:id="@+id/locationFragment"
         android:name="com.example.prueba.LocationFragment"
@@ -19,7 +23,22 @@
         android:id="@+id/specialistFragment"
         android:name="com.example.prueba.SpecialistFragment"
         android:label="fragment_specialist"
-        tools:layout="@layout/fragment_specialist" />
+        tools:layout="@layout/fragment_specialist" >
+        <argument
+            android:name="name"
+            app:argType="string"
+            app:nullable="true"
+            android:defaultValue="null" />
+        <argument
+            android:name="description"
+            app:argType="string"
+            app:nullable="true"
+            android:defaultValue="null" />
+        <argument
+            android:name="search"
+            app:argType="boolean"
+            android:defaultValue="true" />
+    </fragment>
     <fragment
         android:id="@+id/profileFragment"
         android:name="com.example.prueba.ProfileFragment"
