--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -5,6 +5,7 @@
     <dimen name="card_elevation">8dp</dimen>
     <dimen name="text_button_size">16dp</dimen>
     <dimen name="toolbar_icon_size">120dp</dimen>
-    <dimen name="toolbar_icon_size_height">48dp</dimen>
+    <dimen name="toolbar_icon_size_height">50dp</dimen>
+    <dimen name="service_icon_size">50dp</dimen>
 
 </resources>
